--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -13,17 +13,25 @@ footer a{
     color: white;
 }
 
-footer .footer-content{
+footer .secs{
     display: flex;
     width: calc(100% - 4rem);
     justify-content: space-around;
+    /* flex-direction: column; */
     padding: 2rem;
+    /* background-color: red; */
+}
+
+footer .footer-content{
+    display: flex;
+    flex-direction: column;
+    /* background-color: yellow; */
 }
 
 footer .sec-ft{
     text-align: center;
     overflow: hidden;
-    /* padding: 0 2rem; */
+    /* margin: 0 2rem; */
     /* border: solid 1px red; */
 }
 
@@ -39,7 +47,10 @@ footer .copyright{
     /* display: flex; */
     /* flex: 1; */
     /* width: 100%; */
-    /* background-color: red; */
+    background-color: black;
+    /* flex: 1; */
+    width: 100%;
+    text-align: center;
 }
 
 footer #sec-1 img{
@@ -50,10 +61,26 @@ footer #sec-1 img{
     box-shadow: 5px 5px 5px black;  
 }
 
+footer .contato-footer {
+    padding-top: 2rem;
+    /* background-color: blue; */
+}
+
+footer #sec-1 .contato-footer img {
+    width: 6rem;
+    height: 4rem;
+    border-radius: 0%;
+    background-color: transparent;
+    box-shadow: none;
+    /* border: 1px solid black; */
+    /* background-color: red; */
+}
+
 footer #sec-1{
     display: flex;
     height: 100%;
     justify-content: center;
+    flex-direction: column;
 }
 footer #sec-1 a{
     /* background-color: red; */
@@ -67,6 +94,12 @@ footer #sec-1 a{
 
 }
 
+footer #sec-2{
+    /* max-width: 30vw; */
+    padding: 0 2rem 0 0;
+    /* background-color: red; */
+}
+
 footer #sec-3{
     border: solid 0.2rem white;
     border-radius: 10px;
@@ -76,14 +109,24 @@ footer #sec-3{
     /* height: fit-content; */
 }
 
+footer #sec-3{
+    min-width: 300px;
+    min-height: 225px;
+}
+footer #sec-3 iframe {
+    /* width: 300px; */
+    /* min-width: 300px; */
+    /* width: 30rem; */
+}
+
 @media (min-width: 1600px) {
     footer .footer-content {
         width: 1500px;
     }
 }
 
-@media (max-width: 768px) {
-    footer .footer-content {
+@media (max-width: 800px) {
+    footer .footer-content .secs {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -102,6 +145,7 @@ footer #sec-3{
     }
     footer #sec-2{
         order: 2;
+        padding: 0rem;
     }
     footer #sec-3{
         order: 3;
