--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -6,6 +6,7 @@ footer{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* flex: 1; */
 }
 
 footer a{
@@ -42,7 +43,7 @@ footer .sec-ft p{
 }
 
 footer .copyright{
-    padding-bottom: 0.75rem;
+    /* background-color: red; */
     font-size: 0.7rem;
     /* display: flex; */
     /* flex: 1; */
@@ -51,6 +52,16 @@ footer .copyright{
     /* flex: 1; */
     width: 100%;
     text-align: center;
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* height: 3rem; */
+    /* align-items: center; */
+}
+
+footer .copyright p {
+    padding: 0.5rem;
+    /* margin: 2rem; */
+    /* background-color: red; */
 }
 
 footer #sec-1 img{
@@ -64,6 +75,15 @@ footer #sec-1 img{
 footer .contato-footer {
     padding-top: 2rem;
     /* background-color: blue; */
+}
+
+footer img{
+    transition: filter 0.3s ease;
+}
+
+footer a:hover img {
+    /* box-shadow: 5px 5px 9px black; */
+    filter: contrast(65%);
 }
 
 footer #sec-1 .contato-footer img {
