--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -9,12 +9,13 @@
     src: url(../font/Odibee_Sans/OdibeeSans-Regular.ttf);
 }
 
-
+/* Header - Configurações Gerais */
 header{
     font-family: "Reem";
     word-spacing: 4px;
     color: white;
 }
+
 
 
 /* 1. BARRA SUPERIOR */
@@ -84,6 +85,9 @@ header .btn-barra{
     box-shadow: 3px 3px 5px rgb(0, 0, 0);
     text-shadow: 2px 2px 3px black;
 }
+header .btn-barra:hover {
+    background: linear-gradient(to bottom, #38997f, #14392f);
+}
 
 /* 1.2.2.MENU DOS BOTÕES */
 header .menu-btn{
@@ -101,92 +105,26 @@ header .menu-btn{
     display: none;
     position: absolute;
 }
+
 /* 1.2.2.1 Opções do menu dos botões */
-
-
-
-
 header .menu-btn a {
     text-decoration: none;
     padding: 0.7rem 0.4rem;
     text-align: center;
-    opacity: 0.85;
-    transition: opacity 0.3s ease;
 }
 
-header .menu-btn a:hover {
-    opacity: 1;
+header .menu-btn a{
+    /* transition: filter 0.5s ease; */
+}
+
+header .menu-btn a:hover{
+    /* filter: contrast(200%); */
+    /* opacity: 70%; */
 }
 
 header .menu-btn a:hover{
     background-image: linear-gradient(to right, #111, transparent, #111);
 }
-
-
-
-
-
-
-
-
-/* 
-header .menu-btn a{
-    text-decoration: none;
-    padding: 0.7rem 0.4rem;
-    text-align: center;
-    opacity: 0.5;    
-} */
-
-
-
-
-/* header .menu-btn a:hover{ */
-
-/* } */
-
-
-/* header .menu-btn a:hover { */
-    /* background-image: linear-gradient(to right, #111, transparent, #111); */
-    
-/* } */
-
-
-/* @keyframes fadeInOut { */
-    /* from { */
-        /* background-image: none; */
-    /* } */
-    /* to { */
-        /* background-image: linear-gradient(to right, #111, transparent, #111); */
-        /* width: 1rem; */
-    /* } */
-/* } */
-
-
-/* header .menu-btn a :hover { */
-    /* animation: fadeInOut 0.5s ease; */
-    /* animation: fadeInOut 0.5s ease; */
-/* } */
-
-/* .menu-btn a:hover{
-    animation: fadeIn 1s ease;
-}
-
-@keyframes fadeIn {
-    from {
-        /* transform: ; */
-        /* background-image: linear-gradient(to right, #11111100, transparent, #11111100); 
-        opacity: 0;    
-    }
-
-    to {
-        /* transform: rotate(360deg); */
-        /* background-image: linear-gradient(to right, #111111ff, transparent, #111111ff); 
-        opacity: 1;
-    }
-} */
-
-
-
 
 
 /* 1.3. ICONE HAMBURGUER */
@@ -285,27 +223,13 @@ header .titulo-dir{
 
     header .barra-sup{
         height: 7rem;
-        background-image: url("../img/banner-peq.png");
-        
-        /* background-color: black; */
-        }
-    /* header.barra-sup img{ */
-        /* position: absolute; */
-        /* z-index: -3; */
-    /* } */
+        background-image: url("../img/banner-peq.png");        
+    }
     header .titulo-barra{
         display: inline;
     }
     header img{
-        /* border: solid 1px black; */
-        /* box-shadow: solid 1px black; */
-        /* background: radial-gradient(circle, black, transparent); */
-        /* border-radius: ; */
-        /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); */
         filter: drop-shadow(5px 5px 2px rgba(0, 0, 0, 1));
-        /* filter: contrast(10%); */
-        /* filter: contrast(200%) */
-        /* box-shadow: 1px 5px 10px rgba(0, 0, 0, 1); */
     }
     header .div-btns-barra{
         right: 0;
@@ -321,7 +245,7 @@ header .titulo-dir{
     header .btn-barra{
         width: 12rem;
         font-size: 10pt;
-        /* font-weight: 600; */
+        font-weight: 600;
         height: 2.5rem;
         background: transparent;
         border-radius: 0rem;
@@ -393,7 +317,6 @@ header .titulo-dir{
         width: calc(100% - 20vw);        
     }
 }
-
 
 /* Estilos para telas com largura maior ou igual a 1200px */
 @media (min-height: 1200px){
