--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -7,7 +7,7 @@ footer{
     align-items: center;
     justify-content: center;
     /* flex: 1; */
-    /* z-index: 2; */
+    z-index: 5;
 }
 
 footer a{
