criação de lista personalizada

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -236,7 +236,7 @@ main ul li a {
 }
 
 main ul li {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   min-width: 40%;
   max-width: 50%;
